# DeepReinforcementLearningInAction

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Appendix/: Appendix.ipynb
notebooks/: 01_book.ipynb  02_book.ipynb  02_errata.ipynb  03_book.ipynb  03_errata.ipynb  03_refactored_extended.ipynb  04_book.ipynb  04_errata.ipynb  05_book.ipynb  05_errata.ipynb  05_errata_broken.ipynb  05_extended_and_refactored.ipynb  06_String_Genetic_Algorithm.ipynb  06_add_chromosomal_recombination.ipynb  06_book.ipynb  06_book_missing_running_mean_def.ipynb  07_book_error_ale_py_need_freeway_rom.ipynb  07_book_extended_refactored.ipynb  08_book.ipynb  08_book_kernel_dies.ipynb  08_extended_refactored.ipynb  09_book.ipynb  10_book.ipynb  Gridworld.py
