[tool.poetry]
name = "reinforcement-learning-notebooks"
version = "0.0.1"
description = ""
authors = ["Jack Etheredge <jack.etheredge@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
appnope = "0.1.0"
backcall = "0.1.0"
certifi = "2018.4.16"
chardet = "3.0.4"
cycler = "0.10.0"
decorator = "4.3.0"
future = "0.16.0"
gym = {extras = ["atari"], version = "^0.20.0"}
idna = "2.7"
ipython = "7.3.0"
ipython-genutils = "0.2.0"
jedi = "0.12.1"
kiwisolver = "1.0.1"
matplotlib = "2.2.2"
numpy = "^1.21.2"
parso = "0.3.1"
pexpect = "4.6.0"
pickleshare = "0.7.4"
prompt-toolkit = "2.0.9"
ptyprocess = "0.6.0"
pyglet = "1.5.11"
Pygments = "^2.10.0"
pyparsing = "2.2.0"
python-dateutil = "2.7.3"
pytz = "2018.5"
requests = "^2.26.0"
simplegeneric = "0.8.1"
six = "1.11.0"
traitlets = "4.3.2"
urllib3 = "^1.26.7"
wcwidth = "0.1.7"
torch = {version = "^1.9.1", python = "^3.7"}
nes-py = "^8.1.8"
gym-super-mario-bros = "^7.3.2"
ipykernel = "5.3.4"
scikit-image = "^0.18.3"
ale-py = "^0.7"
cmake = "^3.21.3"
atari-py = "0.2.9"
magent = "^0.1.14"

[tool.poetry.dev-dependencies]
pytest = "^3.4"
